# scada

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES.md  SCADA系统教科书.txt  _api_push.py  _check_bugs.py  _git_push.py  _multi_scan_result.txt  _push.bat  _test_all.py  build.bat  build.py  check_status.py  config.py  docker-compose.yml  factory.py  index.html  launcher.py  package-lock.json  package.json  package_to_desktop.ps1  paths.py  pyproject.toml  pyrightconfig.json  quick_test.py  requirements.txt  run.py  run_new.py  run_v2.py  setup.bat  start.bat  start_real.bat  start_real_device.bat  start_simulation.bat  start_simulator.bat  stderr.txt  (+16 more)
.claude/: work_queue.md
backend/: build_entry.py
core/: __init__.py  adaptive_compression.py  alert_integration.py  api_cache.py  api_docs_enhancer.py  backup_verifier.py  batch_operations.py  body_size_limit.py  brotli_compression.py  cache_tier.py  chaos_engineering.py  chunked_response.py  circuit_breaker.py  config_encryption.py  config_manager.py  config_validator.py  config_validator_startup.py  connection_pool.py  csrf_protection.py  cursor_pagination.py  data_access_audit.py  data_aggregator.py  data_compressor.py  data_deduplicator.py  data_stream.py  db_pool_enhanced.py  db_pool_monitor.py  deep_validator.py  degradation_manager.py  di_container.py  dynamic_rate_limiter.py  encryption.py  error_code_standardizer.py  etag_support.py  event_bus.py  export_progress.py  fault_injection.py  generate_certs.py  ha_manager.py  health_checker.py  (+41 more)
data/: audit_log.jsonl
(+312 files in other folders)
